...
                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="AjT-vi-yPC">
                                        <rect key="frame" x="0.0" y="0.0" width="335" height="27"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9yQ-M0-ojb">
                                                <rect key="frame" x="0.0" y="0.0" width="111.5" height="27"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                <state key="normal" title="Add success rule"/>
                                                <connections>
                                                    <action selector="addSuccessRule:" destination="q7v-OS-MBb" eventType="touchUpInside" id="q9k-iI-13U"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zru-Nt-wdf">
                                                <rect key="frame" x="111.5" y="0.0" width="112" height="27"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                <state key="normal" title="Add failing rule"/>
                                                <connections>
                                                    <action selector="addFailingRule:" destination="q7v-OS-MBb" eventType="touchUpInside" id="eYZ-sR-TiK"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kEQ-M2-daM">
                                                <rect key="frame" x="223.5" y="0.0" width="111.5" height="27"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                <state key="normal" title="Add empty rule"/>
                                                <connections>
                                                    <action selector="addEmptyRule:" destination="q7v-OS-MBb" eventType="touchUpInside" id="9QW-j8-Fh5"/>
                                                </connections>
                                            </button>
                                        </subviews>
                                    </stackView>
...
                                                <connections>
                                                    <action selector="resign:" destination="q7v-OS-MBb" eventType="touchUpInside" id="fjd-yL-5Qr"/>
                                                </connections>
                                            </button>
                                        </subviews>
                                    </stackView>
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oKb-Ji-bGy" customClass="VerifiableInput" customModule="SafeUIKit">
                                        <rect key="frame" x="0.0" y="117" width="335" height="50"/>
                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="50" placeholder="YES" id="8tP-hL-OSI"/>
                                        </constraints>
                                    </view>
...
