...
        layer.borderWidth = 2
        layer.cornerRadius = 10
        clipsToBounds = true
    }

    private func setupCustomClearButton() {
        clearButton.accessibilityIdentifier = "Clear text"
        clearButton.frame = TextInput.smallAccessoryRect
        clearButton.addTarget(self, action: #selector(clearText), for: .touchUpInside)
        clearButton.setImage(Asset.clearIcon.image, for: .normal)
    }

    private func setupCustomSuccessImage() {
...
